--- a/filter/Makefile
+++ b/filter/Makefile
@@ -4,8 +4,8 @@
 
 include $(GOROOT)/src/Make.inc
 
-TARG=github.com/petar/GoGauge/gauge
+TARG=github.com/petar/GoGauge/filter
 GOFILES=\
-	gauge.go\
+	filter.go\
 
 include $(GOROOT)/src/Make.pkg
